--- a/vids/index.html
+++ b/vids/index.html
@@ -1,23 +1,38 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <video controls width="200" hight="100">
-        <source src="vid.mp4" type="video/mp4"  >
+      <source src="vid.mp4" type="video/mp4" />
+      <source src="vid.mp4" type="video/ogg" />
     </video>
 
     <video controls width="200" hight="100">
-        <source src="vid2.mov" type="video/mov" >
+      <source src="vid2.mov" type="video/mov" />
+      <source src="vid2.mov" type="video/ogg" />
+      <source src="vid2.mov" type="video/mp4" />
     </video>
 
-    <br>
+    <br />
 
     <audio controls>
-    <source src="audio.mp3" type="audio/mp3">    
+      <source src="audio.mp3" type="audio/mp3" />
     </audio>
-</body>
+
+    <br />
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/0OF-BdJDnLQ?si=ePSmmMOkJjtlWeq8"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+    ></iframe>
+  </body>
 </html>
