--- a/vids/index.html
+++ b/vids/index.html
@@ -12,6 +12,9 @@
 
     <video controls width="200" hight="100">
         <source src="vid2.mov" type="video/mov" >
+        <source src="vid2.mov" type="video/ogg" >
+        <source src="vid2.mov" type="video/mp4" >
+
     </video>
 
     <br>
