--- a/chat gpt/index.html
+++ b/chat gpt/index.html
@@ -32,7 +32,7 @@
           <h1>What I Can Help You?</h1>
 
           <form>
-            <input type="text" />
+            <input type="text" placeholder="Massege ChatGPT" style="width: 400px; height: 30px;" /> <br>
             <button>+</button>
             <button>search</button>
             <button>reason</button>
