--- a/whatsApp/index.html
+++ b/whatsApp/index.html
@@ -235,7 +235,7 @@
               <img src="pic.jpg" alt="picture" />
 
               <div>
-                <h3 class="pic1">eman ghannam</h3>
+                <h3 class="pic1">Mama</h3>
                 <h4 class="pic1">hello! how are you?</h4>
               </div>
             </div>
@@ -251,7 +251,7 @@
               <img src="pic.jpg" alt="picture" />
 
               <div>
-                <h3 class="pic1">eman ghannam</h3>
+                <h3 class="pic1">Afnan</h3>
                 <h4 class="pic1">hello! how are you?</h4>
               </div>
             </div>
@@ -262,6 +262,7 @@
         </div>
       </div>
 
+      <!-- head chat  -->
       <div class="chats">
         <div class="chat">
           <div class="left-side">
@@ -275,6 +276,8 @@
           </div>
         </div>
         <hr />
+
+        <!-- conversations -->
 
         <div class="chat-container">
           <div class="message sender-1">
@@ -315,98 +318,105 @@
           <div class="message sender-2">
             <h3>Definitely! Talk to you later.</h3>
           </div>
-        </div>
-        <div class="message sender-1">
-          <h3>Hey! How are you?</h3>
-        </div>
-        <div class="message sender-1">
-          <h3>I just wanted to check in on you.</h3>
+          <div class="message sender-1">
+            <h3>Hey! How are you?</h3>
+          </div>
+          <div class="message sender-1">
+            <h3>I just wanted to check in on you.</h3>
+          </div>
+  
+          <div class="message sender-2">
+            <h3>Hi! I'm good, thanks for asking.</h3>
+          </div>
+          <div class="message sender-2">
+            <h3>How about you? How's everything going?</h3>
+          </div>
+  
+          <div class="message sender-1">
+            <h3>I'm doing great, thanks!</h3>
+          </div>
+          <div class="message sender-1">
+            <h3>Just busy with work, but nothing too stressful.</h3>
+          </div>
+  
+          <div class="message sender-2">
+            <h3>That's good to hear!</h3>
+          </div>
+          <div class="message sender-2">
+            <h3>Let me know if you need any help with anything.</h3>
+          </div>
+  
+          <div class="message sender-1">
+            <h3>Will do! Thanks a lot.</h3>
+          </div>
+          <div class="message sender-1">
+            <h3>Let's catch up soon!</h3>
+          </div>
+  
+          <div class="message sender-2">
+            <h3>Definitely! Talk to you later.</h3>
+          </div>
+          <div class="message sender-1">
+            <h3>Let's catch up soon!</h3>
+          </div>
+  
+          <div class="message sender-2">
+            <h3>Definitely! Talk to you later.</h3>
+          </div>
+          <div class="message sender-1">
+            <h3>Let's catch up soon!</h3>
+          </div>
+  
+          <div class="message sender-2">
+            <h3>Definitely! Talk to you later.</h3>
+          </div>
+          <div class="message sender-1">
+            <h3>Let's catch up soon!</h3>
+          </div>
+  
+          <div class="message sender-2">
+            <h3>Definitely! Talk to you later.</h3>
+          </div>
+          <div class="message sender-1">
+            <h3>Let's catch up soon!</h3>
+          </div>
+          <div class="message sender-2">
+            <h3>Hi! I'm good, thanks for asking.</h3>
+          </div>
+  
+          <div class="message sender-2">
+            <h3>Definitely! Talk to you later.</h3>
+          </div>
+          <div class="message sender-1">
+            <h3>Let's catch up soon!</h3>
+          </div>
+  
+          <div class="message sender-2">
+            <h3>Definitely! Talk to you later.</h3>
+          </div>
+          <div class="message sender-1">
+            <h3>Let's catch up soon!</h3>
+          </div>
+  
+          <div class="message sender-2">
+            <h3>Definitely! Talk to you later.</h3>
+          </div>
+          <div class="message sender-1">
+            <h3>Let's catch up soon!</h3>
+          </div>
+  
+          <div class="message sender-2">
+            <h3>Definitely! Talk to you later.</h3>
+          </div>
+
+
+
         </div>
 
-        <div class="message sender-2">
-          <h3>Hi! I'm good, thanks for asking.</h3>
-        </div>
-        <div class="message sender-2">
-          <h3>How about you? How's everything going?</h3>
-        </div>
 
-        <div class="message sender-1">
-          <h3>I'm doing great, thanks!</h3>
-        </div>
-        <div class="message sender-1">
-          <h3>Just busy with work, but nothing too stressful.</h3>
-        </div>
+        
 
-        <div class="message sender-2">
-          <h3>That's good to hear!</h3>
-        </div>
-        <div class="message sender-2">
-          <h3>Let me know if you need any help with anything.</h3>
-        </div>
-
-        <div class="message sender-1">
-          <h3>Will do! Thanks a lot.</h3>
-        </div>
-        <div class="message sender-1">
-          <h3>Let's catch up soon!</h3>
-        </div>
-
-        <div class="message sender-2">
-          <h3>Definitely! Talk to you later.</h3>
-        </div>
-        <div class="message sender-1">
-          <h3>Let's catch up soon!</h3>
-        </div>
-
-        <div class="message sender-2">
-          <h3>Definitely! Talk to you later.</h3>
-        </div>
-        <div class="message sender-1">
-          <h3>Let's catch up soon!</h3>
-        </div>
-
-        <div class="message sender-2">
-          <h3>Definitely! Talk to you later.</h3>
-        </div>
-        <div class="message sender-1">
-          <h3>Let's catch up soon!</h3>
-        </div>
-
-        <div class="message sender-2">
-          <h3>Definitely! Talk to you later.</h3>
-        </div>
-        <div class="message sender-1">
-          <h3>Let's catch up soon!</h3>
-        </div>
-        <div class="message sender-2">
-          <h3>Hi! I'm good, thanks for asking.</h3>
-        </div>
-
-        <div class="message sender-2">
-          <h3>Definitely! Talk to you later.</h3>
-        </div>
-        <div class="message sender-1">
-          <h3>Let's catch up soon!</h3>
-        </div>
-
-        <div class="message sender-2">
-          <h3>Definitely! Talk to you later.</h3>
-        </div>
-        <div class="message sender-1">
-          <h3>Let's catch up soon!</h3>
-        </div>
-
-        <div class="message sender-2">
-          <h3>Definitely! Talk to you later.</h3>
-        </div>
-        <div class="message sender-1">
-          <h3>Let's catch up soon!</h3>
-        </div>
-
-        <div class="message sender-2">
-          <h3>Definitely! Talk to you later.</h3>
-        </div>
-
+        <!-- footer of chat box -->
         <div class="foot">
           <i class="fa-regular fa-face-smile icon"></i>
           <i class="fa-solid fa-paperclip icon"></i>
