--- a/whatsApp/index.html
+++ b/whatsApp/index.html
@@ -59,7 +59,7 @@
                 <img src="pic.jpg" alt="picture" />
 
                 <div>
-                  <h3 class="pic1">eman ghannam</h3>
+                  <h3 class="pic1">afnan</h3>
                   <h4 class="pic1">hello! how are you?</h4>
                 </div>
               </div>
