--- a/whatsApp/index4.html
+++ b/whatsApp/index4.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/872882e136.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style4.css" />
   </head>
   <body>
     <!-- <header>
