--- a/youtube/index.html
+++ b/youtube/index.html
@@ -7,80 +7,410 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
-
     <div class="header">
-        <div>
-          <h1>YOUTUBE</h1>
-        </div>
-        <form>search <input type="text" /></form>
+      <div>
+        <h1>YOUTUBE</h1>
+      </div>
+      <form>search <input type="text" /></form>
 
-        <form>
-          <button>notification</button>
-          <button>account</button>
-          <button>create</button>
-        </form>
-   
+      <form>
+        <button>notification</button>
+        <button>account</button>
+        <button>create</button>
+      </form>
     </div>
 
     <div class="parent-1">
       <nav>
-        <h2>Home</h2>
+        <h3>Home</h3>
         <br />
-        <h2>Explore</h2>
+        <h3>Explore</h3>
         <br />
-        <h2>Subscriptions</h2>
+        <h3>Subscriptions</h3>
         <br />
-        <h2>Library</h2>
+        <h3>Library</h3>
         <br />
-        <h2>History</h2>
+        <h3>History</h3>
         <br />
-        <h2>Your Videos</h2>
+        <h3>Your Videos</h3>
         <br />
-        <h2>Watch Later</h2>
+        <h3>Watch Later</h3>
         <br />
-        <h2>Liked Videos</h2>
+        <h3>Liked Videos</h3>
         <br />
-        <h2>Playlists</h2>
+        <h3>Playlists</h3>
         <br />
-        <h2>Settings</h2>
+        <h3>Settings</h3>
         <br />
-        <h2>Report History</h2>
+        <h3>Report History</h3>
         <br />
-        <h2>Help</h2>
+        <h3>Help</h3>
         <br />
-        <h2>Send Feedback</h2>
+        <h3>Send Feedback</h3>
       </nav>
       <div class="content">
         <div class="flex">
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
-          <div class="item"></div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div><div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="item">
+            <iframe
+              width="200"
+              height="100"
+              src="https://www.youtube.com/embed/2cpd1fsUQ1I?si=e14eA0OOWogWvGRL"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
         </div>
       </div>
-     
     </div>
-
-    
   </body>
 </html>
