Mid Term Assisment

--- a/midTerm assisment - project/index.html
+++ b/midTerm assisment - project/index.html
@@ -63,16 +63,6 @@
 
               <p id="massegeError1" style="color: red"></p>
 
-              <label for="address">Address </label>
-              <input
-                type="text"
-                id="address"
-                name="address"
-                placeholder="enter your Address please"
-              />
-
-              <p id="massegeError2" style="color: red"></p>
-
               <label for="email">Email </label>
               <input
                 type="email"
@@ -106,6 +96,14 @@
 
               <p id="massegeError5" style="color: red"></p>
 
+              <label for="address">Address </label>
+              <textarea
+                id="address"
+                name="address"
+                placeholder="Enter your address please"
+              ></textarea>
+
+              <p id="massegeError2" style="color: red"></p>
               <button type="submit">Add User</button>
             </form>
           </div>
