mid term assisment

--- a/midTerm assisment - project/index.html
+++ b/midTerm assisment - project/index.html
@@ -140,7 +140,7 @@
             <div id="card" style="display: none">
               <div class="container">
                 <div
-                  class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4"
+                  class="row row-cols-1 row-cols-sm-2 row-cols-md-3  g-4"
                   id="rowCard"
                 >
                   <!-- الكروت رح تنضاف هون -->
